matrix-stack/synapse/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse-dpl
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      volumes:
        - name: synapse-data
          persistentVolumeClaim:
            claimName: synapse-pvc
        - name: synapse-config
          configMap:
            name: synapse-cfm

      securityContext:
        fsGroup: 991

      containers:
        - name: synapse
          image: matrixdotorg/synapse:latest
          securityContext:
            runAsUser: 991
          ports:
            - containerPort: 8008
          volumeMounts:
            - name: synapse-data
              mountPath: /data
            - name: synapse-config
              mountPath: /data/k8s.test.log.config
              subPath: logger-config
