matrix-stack/synapse/04-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-ing
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`matrix.k8s.test`)
      priority: 50
      services:
        - name: synapse-svc
          port: 8008
  tls: {}
